- service_harddrake:
  o handle nvidia173.ko (new legacy series of the proprietary driver)

Version 10.37 - 18 June 2008

- handle jpeg icons (needed for next rpmdrake)
- draksound:
  o do not set snd-ac97-codec's "power_save=1" options on MIPS

Version 10.34 - 12 June 2008

- partitioning wizard:
  o do not propose to resize "hidden" fat partitions
  o do not say "the Windows partition" when there can be more than one
- allow mounting ntfs-3g partitions
  (also fixes detection of Windows partitions during live installation)
- service_harddrake:
  o do not allow fbdev if /proc/fb is empty
  o fix kbluetooth config path
  o fix autoconfiguration of harddisks
- drakupdate_fstab: make sure removable disks are not fs-checked on boot
  (regression introduced in 10.6.3)
- handle renamed drivers:
  o ide-cd is now named ide-cd_mod
  o generic is now named ide-pci-generic
- authentication:
  o add Kerberos Support
  o add disconnected mode for Ldap, Kerberos, Windows auth
  o add more options in Ldap configuration: Fetch DN, TLS
  o remove Active Directory SFU
  o change Winbind authentification to enable domain model choice (NT4 or AD)

Version 10.33 - 29 May 2008

- drakboot:
  o only read bootloader configuration when configuring it
    (usefull in chroots)
- draksound:
  o be more robust when managing /etc/alsa/pulse-default.conf
- drakbug:
  o automatically report CPU name & kernel version
  o prefill the platform field
- list hso driver in network/cellular

Version 10.32 - 13 May 2008

- draksound:
  o advise to log out if PA is enabled/disabled
  o disable PA routing when PA is disabled (#40219)
  o grey PA routing & 5.1 sound if PA is disabled
  o make sure that switch alsa-plugins-pulseaudio is installed when
    enabling PA routing (#40533)
- localedrake:
  o advise to restart when changing system wide settings too
- handle new drivers:
  o pata: pata_sch 

Version 10.31 - 24 April 2008

- bootloader-config: