@@ -1,3 +1,6 @@
+- bootloader-config:
+  o fix handling xen kernels: it should not replace an existing 'linux'
+  entry (#40865)
 - service_harddrake:
   o handle nvidia173.ko (new legacy series of the proprietary driver)
 
